--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Candy Manifest</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://cdn.discordapp.com/attachments/1441539329435500663/1442234952514011166/baixados-removebg-preview.png?ex=6924b178&is=69235ff8&hm=4c0335be01ddafd900d1e8b5a48d1f01ae332f3e16314d146805d3277acdc3e7" />
+
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -13,7 +17,7 @@
 
         <div class="form-box">
             <input type="number" id="appid" placeholder="Digite o App ID" />
-            <button onclick="gerarManifest()">Gerar Manifest</button>
+            <button onclick="generate()">Gerar Manifest</button>
         </div>
 
         <p id="status"></p>
