--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="form-box">
             <input type="number" id="appid" placeholder="Digite o App ID" />
-            <button onclick="generate()">Gerar Manifest</button>
+            <button onclick="gerarManifest()">Gerar Manifest</button>
         </div>
 
         <p id="status"></p>
